updated pages so they work and have the right info

--- a/contact-me.html
+++ b/contact-me.html
@@ -6,13 +6,12 @@
   </head>
   <body>
     <h1>My Contact Details</h1>
-    <p>Somewhere in the world</p>
-    <p>0712545254</p>
-    <p><a href="mailto:myemail@gmail.com">myemail@gmail.com </a></p>
+    <p>London, UK</p>
+    <p><a href="maosotheremail@gmail.com">maosotheremail@gmail.com</a></p>
 
     <hr>
 
-    <form class="" action="mailto:maoruijia@gmail.com" method="post">
+    <form class="" action="mailto:maosotheremail@gmail.com" method="post" enctype="text/plain">
       <p>
         <label for="yourName">Name: </label>
         <input type="text" name="yourName" value="">
@@ -30,8 +29,12 @@
       </p>
 
       <input type="submit" name="" value="Submit">
-
-
     </form>
+
+    <br>
+    <hr size="3" noshade>
+    <br>
+    <a href="index.html">Back to index</a>
+
   </body>
 </html>
