--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
   <br>
   <hr size="3" noshade>
   <br>
-  <a href="Interests.html">My Interests</a>
-  <a href="contact-me.html">Contact Details</a>
+  <a href="interests.html">My Interests</a>
+  <a href="contact-me.html">Contact Me</a>
 
 </body>
 
