--- a/interests.html
+++ b/interests.html
@@ -7,9 +7,15 @@
   <body>
     <h3>Interests</h3>
     <ol>
+      <li><a href="https://www.goodreads.com/user/show/2537083-mao">Reading!</a></li>
       <li>Data Science -- tools for analysis</li>
-      <li>Data Visualisation</li>
-      <li>Web Development -- foundational theory and tools</li>
+      <li>Science fiction</li>
+      <li>Technology -- new interest, still getting into it</li>
     </ol>
+
+    <br>
+    <hr size="3" noshade>
+    <br>
+    <a href="index.html">Back to index</a>
   </body>
 </html>
